syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message RoguelikeRuneRecord {
	uint32 rune_id = 1;
	uint32 left_count = 2;
	uint32 max_count = 3;
}
